--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,13 @@
-
-    <span><a href="/signup">Sign Up</a></span><span><a href="/login">Log In</a></span>
+    <div class="index_container">
+        <div class="signup_login">
+        <div class="logo"><img src="/images/logo.png" alt="Meditracker Logo"></div>
+                <div class="index_buttons"><a href="/signup">Sign Up</a></div>
+                <div class="index_buttons"><a href="/login">Log In</a></div>
+        </div>
+        <div class="header_image">
+            <img src="/images/undraw_doctors_hwty.svg" alt="Two illustrated medical professionals stand against a window, near a plant.">
+        </div>
+    </div>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
