--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,8 +1,39 @@
+<!DOCTYPE html>
+<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+
+    <title>Medigrowth</title>
+
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="/stylesheets/reset.css" />
+    <link rel="stylesheet" href="/stylesheets/index.css" />
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@800&display=swap" rel="stylesheet">
+    
+  </head>
+  <body>  
     <div class="index_container">
         <div class="signup_login">
-        <div class="logo"><img src="/images/logo.png" alt="Meditracker Logo"></div>
-                <div class="index_buttons"><a href="/signup">Sign Up</a></div>
-                <div class="index_buttons"><a href="/login">Log In</a></div>
+                <div class="logo"><img src="/images/logo.png" alt="Meditracker Logo"></div>
+                <div class="outer_button">
+                    <a href="/signup">
+                        <div class="index_buttons">Sign Up</div>
+                    </a>
+                </div>
+                <div class="outer_button">
+                    <a href="/login">
+                        <div class="index_buttons">Log In</div>
+                    </a>
+                </div>
         </div>
         <div class="header_image">
             <img src="/images/undraw_doctors_hwty.svg" alt="Two illustrated medical professionals stand against a window, near a plant.">
@@ -13,3 +44,5 @@
         <![endif]-->
         
         <script src="" async defer></script>
+</body>
+</html>
