--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,7 +1,46 @@
-<h3>Sign Up</h3>
-<form action="/signup" method="POST">
-  <input type="text" name="username" placeholder="Username:">
-  <input type="text" name="email" placeholder="email:">
-  <input type="password" name="password" placeholder="Password:">
-  <input type="submit" value="Sign Up">
-</form>
+<!DOCTYPE html>
+<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+
+    <title>Medigrowth - Sign Up</title>
+
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="/stylesheets/signup_login.css" />
+    <link rel="stylesheet" href="/stylesheets/reset.css" />
+    <link rel="stylesheet" href="/stylesheets/layout.css" />
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@800&display=swap" rel="stylesheet">
+  </head>
+    <body>
+    <div class="login_signup_container">
+        <div class="login_signup">
+            <div class="purple_logo">
+                <img src="/images/purple_logo.png">
+            </div>
+            <div class="form">
+                <form action="/signup" method="POST">
+                    <p><label class="signup_login_labels">Username:</label></p>
+                    <p><input type="text" name="username" placeholder="username" class="signup_login_input"></p>
+                    
+                    <p><label class="signup_login_labels">Email:</label></p>
+                    <p><input type="text" name="email" placeholder="email" class="signup_login_input"></p>
+                    
+                    <p><label class="signup_login_labels">Password:</label></p>
+                    <p><input type="password" name="password" placeholder="password" class="signup_login_input"></p>
+
+                    <p><input type="submit" value="Sign Up" class="submit_button"></p>
+                </form>
+            </div>
+        </div>
+    </div>
+    </body>
+    </html>
