--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -6,7 +6,7 @@
 }
 
 .signup_login {
-  width: 33%;
+  width: 50%;
   height: 100%;
   background-color: #5c00d8;
   display: -webkit-box;
@@ -25,11 +25,14 @@
 }
 
 .header_image {
-  width: 67%;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .index_container {
   height: 100vh;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -42,16 +45,20 @@
           align-items: center;
 }
 
+.outer_button {
+  width: 90%;
+}
+
 .index_buttons {
+  display: block;
   border-radius: 10px;
   padding: 5%;
-  width: 80%;
   margin: 3%;
   text-align: center;
   background-color: yellow;
 }
 
-.index_buttons a {
+.signup_login a {
   color: black;
   text-decoration: none;
 }
@@ -62,5 +69,11 @@
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 3%;
+}
+
+.animation_container {
+  position: absolute;
+  display: block;
+  background-color: transparent;
 }
 /*# sourceMappingURL=index.css.map */
