--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -3,4 +3,90 @@ body {
   width: 100%;
 }
 
+.wrapper {
+  height: 100vh;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 35% 65%;
+      grid-template-columns: 35% 65%;
+  -ms-grid-rows: 100%;
+      grid-template-rows: 100%;
+}
+
+.navigation {
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  grid-column-end: 2;
+  background-color: #5c00d8;
+}
+
+.options_menu {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-item-align: center;
+      align-self: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.content {
+  -ms-grid-column: 2;
+      grid-column-start: 2;
+  grid-column-end: 3;
+}
+
+.logo img {
+  max-width: 90%;
+  margin-bottom: 20px;
+}
+
+.index_buttons {
+  color: white;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding: 10px 0px 10px 0px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.index_buttons:hover {
+  padding-left: 10px;
+  background-color: yellow;
+  color: black;
+}
+
+/*.options_menu a .index_buttons {
+    color: black;
+    text-decoration: none;
+}
+
+.wrapper {
+    height: 100%;
+    display: grid | inline-grid;
+    grid-template-rows: 33% 67%;
+    grid-template-rows: 100%;
+    //align-items: center;
+}
+
+.navigation {
+    width: 33vw;
+    height: 100%;
+    background-color: #5c00d8;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.content {
+    display: block;
+}*/
 /*# sourceMappingURL=layout.css.map */
