--- a/public/stylesheets/layout.scss
+++ b/public/stylesheets/layout.scss
@@ -3,7 +3,77 @@ body {
     width: 100%;
 }
 
-.header_image {
-    height: 500px;
-    width: 500px;
+.wrapper {
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 35% 65%;
+    grid-template-rows: 100%;
 }
+
+.navigation {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    background-color: #5c00d8;
+}
+
+.options_menu {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    justify-content: center;
+}
+
+.content {
+    grid-column-start: 2;
+    grid-column-end: 3;
+}
+
+.logo img {
+    max-width: 90%;
+    margin-bottom: 20px;
+}
+
+.index_buttons {
+    color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding: 10px 0px 10px 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.index_buttons:hover {
+    padding-left: 10px;
+    background-color: yellow;
+    color: black;
+}
+
+
+/*.options_menu a .index_buttons {
+    color: black;
+    text-decoration: none;
+}
+
+.wrapper {
+    height: 100%;
+    display: grid | inline-grid;
+    grid-template-rows: 33% 67%;
+    grid-template-rows: 100%;
+    //align-items: center;
+}
+
+.navigation {
+    width: 33vw;
+    height: 100%;
+    background-color: #5c00d8;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.content {
+    display: block;
+}*/
