Add a doctor created, additional styling added

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -30,13 +30,23 @@
                     </a>
                 </div>
                 <div class="outer_button">
+                    <a href="/signup_doctor">
+                        <div class="index_buttons">Physician Sign Up</div>
+                    </a>
+                </div>
+                <div class="outer_button">
                     <a href="/login">
                         <div class="index_buttons">Log In</div>
                     </a>
                 </div>
+                <div class="outer_button">
+                    <a href="/login_doctor">
+                        <div class="index_buttons">Physician Log In</div>
+                    </a>
+                </div>
         </div>
         <div class="header_image">
-            <img src="/images/undraw_doctors_hwty.svg" alt="Two illustrated medical professionals stand against a window, near a plant.">
+            <img src="/images/index-animation.gif" alt="Two illustrated medical professionals stand against a window, near a plant.">
         </div>
     </div>
         <!--[if lt IE 7]>
