--- a/app/views/posts/create_post.erb
+++ b/app/views/posts/create_post.erb
@@ -1,7 +1,10 @@
-<h2>Add a Post</h2>
-<form action="/create_post" method="POST">
-  <p>Condition: <input type="text" name="condition"></p>
-  <p>Rating: <input type="text" name="rating"></p>
-  <p>Comments: <input type="text" name="comments"></p>
-  <input class="btn btn-primary" type="submit" value="submit">
-</form>
+<div class="intro_bar"><h2>Create an Entry</h2></div>
+
+<div class="page_content">
+    <form action="/create_post" method="POST">
+    <p>Condition: <input type="text" name="condition"></p>
+    <p>Rating: <input type="text" name="rating"></p>
+    <p>Comments: <input type="text" name="comments"></p>
+    <input class="btn btn-primary" type="submit" value="submit">
+    </form>
+</div>
