--- a/public/stylesheets/account.scss
+++ b/public/stylesheets/account.scss
@@ -10,6 +10,9 @@ a {
 
 ul li {
     display: inline-block;
+    background-color: white;
+    margin: 5px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .conditions_list {
