--- a/app/views/posts/view_condition.erb
+++ b/app/views/posts/view_condition.erb
@@ -1,12 +1,26 @@
-<h2><%= @entries[0].condition.capitalize %></h2>
+<div class="intro_bar"><h2><%= @entries[0].condition.capitalize %></h2></div>
+
+<div class="page_content">
+    <%= line_chart Post.where(:user_id => current_user.id, :condition => @entries[0].condition ).group_by_day(:created_at).sum(:rating) %>
+</div>
+
 <div class="conditions_content">
-<% @entries.each do |entry| %>
-    <div>
-        <%= entry.condition.capitalize %>
-        Rating: <%= entry.rating %>
-        <%= entry.comments %>
-        <%= entry.updated_at %>
-        <a href="/posts/<%= entry.id %>/edit">Edit</a>
-        <a href="/posts/<%= entry.id %>/delete/account">Delete</a>
-    </div>
-<% end %>
+    <table>
+        <ul>
+            <% @entries.each do |entry| %>
+                <li>
+                    <div class="conditions_list">
+                        <%= entry.condition.capitalize %>
+                        <p>Rating: <%= entry.rating %></p>
+                        <%= entry.comments %>
+                        <%= entry.updated_at %>
+                        <p>
+                            <a href="/posts/<%= entry.id %>/edit">Edit</a>
+                            <a href="/posts/<%= entry.id %>/delete/account">Delete</a>
+                        </p>
+                    </div>
+                </li>
+            <% end %>
+        </ul>
+    </table>
+</div>
