--- a/public/stylesheets/account.css
+++ b/public/stylesheets/account.css
@@ -9,6 +9,10 @@ a {
 }*/
 ul li {
   display: inline-block;
+  background-color: white;
+  margin: 5px;
+  -webkit-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+          box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .conditions_list {
