--- a/public/stylesheets/index.scss
+++ b/public/stylesheets/index.scss
@@ -40,6 +40,8 @@
     margin: 3%;
     text-align: center;
     background-color: yellow;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 900;
 }
 
 .signup_login a {
