--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -1,6 +1,23 @@
 body {
   height: 100%;
   width: 100%;
+  background-color: #eeeeee;
+}
+
+.intro_bar {
+  background-color: white;
+  padding: 20px;
+  margin: 5px;
+  -webkit-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+          box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+}
+
+.page_content {
+  background-color: white;
+  padding: 20px;
+  margin: 5px;
+  -webkit-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+          box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .wrapper {
