--- a/public/stylesheets/layout.scss
+++ b/public/stylesheets/layout.scss
@@ -1,6 +1,21 @@
 body {
     height: 100%;
     width: 100%;
+    background-color: #eeeeee;
+}
+
+.intro_bar {
+    background-color: white;
+    padding: 20px;
+    margin: 5px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+}
+
+.page_content {
+    background-color: white;
+    padding: 20px;
+    margin: 5px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .wrapper {
