--- a/app/views/doctor_layout.erb
+++ b/app/views/doctor_layout.erb
@@ -33,13 +33,16 @@
         <div class="options_menu">
         <div class="logo"><img src="/images/logo.png" alt="Meditracker Logo"></div>
           <div class="outer_button">
-                  <a href="/account"><div class="index_buttons"><i class="fas fa-clinic-medical"></i> Physician Dashboard</div></a>
+                  <a href="/doctor_account"><div class="index_buttons"><i class="fas fa-clinic-medical"></i> Physician Dashboard</div></a>
           </div>
           <div><hr></div>
           <div class="outer_button">
-                  <a href="/account"><div class="index_buttons"><i class="fas fa-clinic-medical"></i> View Patients</div></a>
+                  <a href="/patients"><div class="index_buttons"><i class="fas fa-clinic-medical"></i> View Patients</div></a>
           </div>
-        
+          <div><hr></div>
+          <div class="outer_button">
+            <a href="/logout"><div class="index_buttons"><i class="fas fa-sign-out-alt"></i>  Log Out</div></a>
+          </div>
         </div>
       </div>
 
