--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -15,6 +15,7 @@
 
     <link rel="stylesheet" href="/stylesheets/reset.css" />
     <link rel="stylesheet" href="/stylesheets/index.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@800&display=swap" rel="stylesheet">
@@ -26,22 +27,22 @@
                 <div class="logo"><img src="/images/logo.png" alt="Meditracker Logo"></div>
                 <div class="outer_button">
                     <a href="/signup">
-                        <div class="index_buttons">Sign Up</div>
+                        <div class="index_buttons"><i class="fas fa-user-plus"></i> Sign Up</div>
                     </a>
                 </div>
                 <div class="outer_button">
                     <a href="/signup_doctor">
-                        <div class="index_buttons">Physician Sign Up</div>
+                        <div class="index_buttons"><i class="fas fa-user-md"></i> Physician Sign Up</div>
                     </a>
                 </div>
                 <div class="outer_button">
                     <a href="/login">
-                        <div class="index_buttons">Log In</div>
+                        <div class="index_buttons"><i class="fas fa-sign-in-alt"></i> Log In</div>
                     </a>
                 </div>
                 <div class="outer_button">
                     <a href="/login_doctor">
-                        <div class="index_buttons">Physician Log In</div>
+                        <div class="index_buttons"><i class="fas fa-sign-in-alt"></i> Physician Log In</div>
                     </a>
                 </div>
         </div>
