--- a/app/views/users/doctor_account.erb
+++ b/app/views/users/doctor_account.erb
@@ -1,3 +1,12 @@
-<h1>Welcome <%= @user.username.capitalize %></h1>
+<div class="intro_bar">
+    <h1>Welcome <%= @doctor.username.capitalize %></h1>
 
-<h2>Physician Dashboard:</h2>
+    <h2>Physician Dashboard:</h2>
+</div>
+
+<% @patients.each do |patient| %>
+    <div class="page_content">
+        <%= patient.username.capitalize %>
+        <%= line_chart patient.posts.group(:condition).group_by_day(:created_at).sum(:rating) %>
+    </div>
+<% end %>
