--- a/public/stylesheets/account.scss
+++ b/public/stylesheets/account.scss
@@ -2,19 +2,70 @@ a {
     text-decoration: none;
 }
 
-/*.conditions_content {
-    width: 90vw;
-    margin-left: auto;
-    margin-right: auto;
-}*/
-
 ul li {
+    margin: 5px;
     display: inline-block;
     background-color: white;
-    margin: 5px;
+    width: 98%;
+    //margin: 5px;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .conditions_list {
-    padding: 20px;
+    //margin: 20px;
+}
+
+.condition_title {
+    background-color: #003da5;
+    color: white;
+    padding: 10px;
+}
+
+.post_content {
+    padding: 10px;
+}
+
+.conditions_split_container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.delete_button {
+    border-style: solid;
+    border-width: 2px;
+    border-color: #A62511;
+    padding: 10px;
+}
+
+.conditions_split_container a .delete_button, a .edit_button {
+    color: #A62511;
+}
+
+.conditions_split_container a .edit_button {
+    color: #7CA611;
+}
+
+.edit_button {
+    border-style: solid;
+    border-width: 2px;
+    border-color: #7CA611;
+    padding: 10px;
+}
+
+.spacing {
+    padding: 10px 0px 10px 0px;
+}
+
+.account_buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.acc_button {
+    background-color: yellow;
+    padding: 10px 20px 10px 20px;
+    color: black;
+    margin-top: 10px;
 }
