--- a/public/stylesheets/index.scss
+++ b/public/stylesheets/index.scss
@@ -8,7 +8,7 @@
 .signup_login {
     width: 50%;
     height: 100%;
-    background-color: #5c00d8;
+    background-color: #003da5;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -35,13 +35,17 @@
 
 .index_buttons {
     display: block;
-    border-radius: 10px;
+    //border-radius: 10px;
     padding: 5%;
     margin: 3%;
     text-align: center;
-    background-color: yellow;
+    background-color: #ffea00;
     font-family: Arial, Helvetica, sans-serif;
-    font-weight: 900;
+    font-weight: 500;
+}
+
+.index_buttons:hover {
+    background-color: orange;
 }
 
 .signup_login a {
