--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -1,12 +1,14 @@
 body {
   height: 100%;
   width: 100%;
-  background-color: #eeeeee;
+  background-color: #e6e6e6;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: light;
 }
 
 .intro_bar {
   background-color: white;
-  padding: 20px;
+  padding: 10px;
   margin: 5px;
   -webkit-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
           box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
@@ -34,7 +36,7 @@ body {
   -ms-grid-column: 1;
       grid-column-start: 1;
   grid-column-end: 2;
-  background-color: #5c00d8;
+  background-color: #003da5;
 }
 
 .options_menu {
@@ -77,33 +79,7 @@ body {
 
 .index_buttons:hover {
   padding-left: 10px;
-  background-color: yellow;
+  background-color: #ffea00;
   color: black;
 }
-
-/*.options_menu a .index_buttons {
-    color: black;
-    text-decoration: none;
-}
-
-.wrapper {
-    height: 100%;
-    display: grid | inline-grid;
-    grid-template-rows: 33% 67%;
-    grid-template-rows: 100%;
-    //align-items: center;
-}
-
-.navigation {
-    width: 33vw;
-    height: 100%;
-    background-color: #5c00d8;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-}
-
-.content {
-    display: block;
-}*/
 /*# sourceMappingURL=layout.css.map */
