--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -22,6 +22,31 @@
     
   </head>
   <body>  
+    <div class="index_logo">
+        <img src="/images/logo.png" alt="Medigrowth Logo">
+    </div>
+    <div class="index_container">
+        <div class="patient_container">
+            <div class="index_button_container_user">
+                <a href="/signup"><div class="index_button"><i class="fas fa-user-plus"></i> Sign Up</div></a>
+            </div>
+            <div class="index_button_container_user">
+                <a href="/login"><div class="index_button index_bottom_button"><i class="fas fa-sign-in-alt"></i> Log In</div></a>
+            </div>
+        </div>
+
+        <div class="physician_container">
+            <div class="index_button_container_physician">
+                <a href="/signup_doctor"><div class="index_button"><i class="fas fa-user-md"></i> Physician Sign Up</div></a>
+            </div>
+            <div class="index_button_container_physician">
+                <a href="/login_doctor"><div class="index_button index_bottom_button"><i class="fas fa-sign-in-alt"></i> Physician Log In</div></a>
+            </div>
+        </div>
+    </div>
+
+
+    <!--
     <div class="index_container">
         <div class="signup_login">
                 <div class="logo"><img src="/images/logo.png" alt="Meditracker Logo"></div>
@@ -50,6 +75,8 @@
             <img src="/images/index-animation.gif" alt="Two illustrated medical professionals stand against a window, near a plant.">
         </div>
     </div>
+    -->
+
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
