--- a/app/views/users/add_doctor.erb
+++ b/app/views/users/add_doctor.erb
@@ -1,4 +1,8 @@
-<div class="intro_bar"><h2>Add a Physician</h2></div>
+<div class="intro_bar">
+    <div class="intro_title">
+        <h2>Add a Physician</h2>
+    </div>
+</div>
 
 <% if @user.doctor != 0 && @user.doctor != nil %>
 <div class="intro_bar">Current Physician: <%= @doctor.capitalize %> </div>
