--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -33,7 +33,7 @@
 
                     <p><label class="signup_login_labels">Password:</label></p>
                     <p><input type="password" name="password" placeholder="password" class="signup_login_input"></p>
-                    <input type="submit" value="Log In" class="submit_button">
+                    <input type="submit" value="Log In" class="submit_button_user">
                 </form>
         </div>
     </div>
