--- a/app/views/users/login_doctor.erb
+++ b/app/views/users/login_doctor.erb
@@ -22,7 +22,7 @@
   </head>
   <body>
 
-    <div class="login_signup_container">
+    <div class="login_signup_container_physician">
         <div class="login_signup">
                 <div class="purple_logo">
                     <img src="/images/purple_logo.png">
@@ -33,7 +33,7 @@
 
                     <p><label class="signup_login_labels">Password:</label></p>
                     <p><input type="password" name="password" placeholder="password" class="signup_login_input"></p>
-                    <input type="submit" value="Log In" class="submit_button">
+                    <input type="submit" value="Log In" class="submit_button_physician">
                 </form>
         </div>
     </div>
