--- a/app/views/users/patients.erb
+++ b/app/views/users/patients.erb
@@ -1,4 +1,8 @@
-<div class="intro_bar"><h2>View Patients</h2></div>
+<div class="intro_bar">
+    <div class="intro_title">
+        <h2>View Patients</h2>
+    </div>
+</div>
 
 <ul>
 <% @doctor.users.each do |user| %>
