--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -37,7 +37,7 @@
                     <p><label class="signup_login_labels">Password:</label></p>
                     <p><input type="password" name="password" placeholder="password" class="signup_login_input"></p>
 
-                    <p><input type="submit" value="Sign Up" class="submit_button"></p>
+                    <p><input type="submit" value="Sign Up" class="submit_button_user"></p>
                 </form>
             </div>
         </div>
