--- a/app/views/users/signup_doctor.erb
+++ b/app/views/users/signup_doctor.erb
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@800&display=swap" rel="stylesheet">
   </head>
     <body>
-    <div class="login_signup_container">
+    <div class="login_signup_container_physician">
         <div class="login_signup">
             <div class="purple_logo">
                 <img src="/images/purple_logo.png">
@@ -37,7 +37,7 @@
                     <p><label class="signup_login_labels">Password:</label></p>
                     <p><input type="password" name="password" placeholder="password" class="signup_login_input"></p>
 
-                    <p><input type="submit" value="Sign Up" class="submit_button"></p>
+                    <p><input type="submit" value="Sign Up" class="submit_button_physician"></p>
                 </form>
             </div>
         </div>
