--- a/public/stylesheets/layout.scss
+++ b/public/stylesheets/layout.scss
@@ -1,16 +1,25 @@
 body {
     height: 100%;
     width: 100%;
-    background-color: #e6e6e6;
+    background-color: #042693;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: light;
 }
 
 .intro_bar {
+    height: 200px;
     background-color: white;
-    padding: 10px;
-    margin: 5px;
+    background-image: url("/images/index/patient-log-in.jpg");
+    background-size: cover;
+    background-position: center;
+    color: white;
+    font-weight: 500;
+    font-size: 20px;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+    border-radius: 14px 0px 0px 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .page_content {
@@ -24,13 +33,12 @@ body {
     height: 100vh;
     display: grid;
     grid-template-columns: 35% 65%;
-    grid-template-rows: 100%;
 }
 
 .navigation {
     grid-column-start: 1;
     grid-column-end: 2;
-    background-color: #003da5;
+    background-color: #042693;
 }
 
 .options_menu {
@@ -64,6 +72,12 @@ body {
 
 .index_buttons:hover {
     padding-left: 10px;
-    background-color: #ffea00;
+    background-color: #f4c902;
     color: black;
+}
+
+.content {
+    height: 100%;
+    border-radius: 15px 0px 0px 15px;
+    background-color: #e6e6e6;
 }
