--- a/public/stylesheets/signup_login.css
+++ b/public/stylesheets/signup_login.css
@@ -3,7 +3,9 @@ body {
 }
 
 .login_signup_container {
-  background-color: #003da5;
+  background-image: url("/images/index/patient-log-in.jpg");
+  background-position: center;
+  background-size: cover;
   width: 100vw;
   height: 100vh;
   display: -webkit-box;
@@ -12,18 +14,35 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -ms-flex-item-align: center;
-      align-self: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  text-align: center;
+}
+
+.login_signup_container_physician {
+  background-image: url("/images/index/physician-log-in.jpg");
+  background-position: center;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   text-align: center;
 }
 
 .login_signup {
+  margin-bottom: 10%;
   padding: 25px;
   width: 75%;
   background-color: white;
-  border-radius: 10px;
-  margin-top: auto;
-  margin-bottom: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -53,13 +72,23 @@ body {
   margin-bottom: 10px;
 }
 
-.submit_button {
+.submit_button_user {
   border: 0;
   margin-top: 10px;
   height: 35px;
   width: 76%;
-  background-color: #ffea00;
+  background-color: #f4c902;
   max-width: 510px;
+}
+
+.submit_button_physician {
+  border: 0;
+  margin-top: 10px;
+  height: 35px;
+  width: 76%;
+  background-color: #042693;
+  max-width: 510px;
+  color: white;
 }
 
 .login_signup_container .login_signup form p label.signup_login_labels {
