Updated internal page styles

--- a/app/views/doctor_layout.erb
+++ b/app/views/doctor_layout.erb
@@ -43,15 +43,15 @@
           <div class="outer_button">
             <a href="/logout"><div class="index_buttons"><i class="fas fa-sign-out-alt"></i>  Log Out</div></a>
           </div>
+          <footer class="branding">
+            <small>&copy; 2021 <strong>Medigrowth</strong><br /> Designed & Programmed by Jessica Bradham</small>
+          </footer>
         </div>
       </div>
 
       <div class="content">
         <%= yield %>
       </div>
-      <footer class="branding">
-        <small>&copy; 2021 <strong>Medigrowth</strong></small>
-      </footer>
 
     </div>
 
