--- a/app/views/users/patients.erb
+++ b/app/views/users/patients.erb
@@ -1,6 +1,6 @@
 <div class="intro_bar">
     <div class="intro_title">
-        <h2>View Patients</h2>
+        <h2 class="title_shadow">View Patients</h2>
     </div>
 </div>
 
