--- a/app/views/users/view_individual_patient.erb
+++ b/app/views/users/view_individual_patient.erb
@@ -1,6 +1,6 @@
 <div class="intro_bar">
     <div class="intro_title">
-        View <%= @user.username.capitalize %> Progress
+        <h2 class="title_shadow">View <%= @user.username.capitalize %> Progress</h2>
     </div>
 </div>
 
