--- a/app/views/users/doctor_account.erb
+++ b/app/views/users/doctor_account.erb
@@ -1,8 +1,6 @@
-<div class="intro_bar">
+<div class="intro_bar_dr">
     <div class="intro_title">
-        <h1>Welcome <%= @doctor.username.capitalize %></h1>
-
-        <h2>Physician Dashboard:</h2>
+        <h1 class="title_shadow">Welcome <%= @doctor.username.capitalize %></h1>
     </div>
 </div>
 
