--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -30,6 +30,30 @@ body {
           justify-content: space-between;
 }
 
+.intro_bar_dr {
+  height: 200px;
+  background-color: white;
+  background-image: url("/images/index/physician-log-in.jpg");
+  background-size: cover;
+  background-position: center;
+  color: white;
+  font-weight: 500;
+  font-size: 20px;
+  -webkit-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+          box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 14px 0px 0px 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 .page_content {
   background-color: white;
   padding: 20px;
@@ -76,6 +100,7 @@ body {
   -ms-grid-column: 2;
       grid-column-start: 2;
   grid-column-end: 3;
+  min-height: 100vh;
 }
 
 .logo img {
@@ -101,5 +126,22 @@ body {
   height: 100%;
   border-radius: 15px 0px 0px 15px;
   background-color: #e6e6e6;
+}
+
+.branding {
+  text-align: center;
+  width: 100%;
+  font-size: 10px;
+  color: darkgray;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+}
+
+h1.title_shadow {
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
+}
+
+h2.title_shadow {
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
 }
 /*# sourceMappingURL=layout.css.map */
