--- a/public/stylesheets/layout.scss
+++ b/public/stylesheets/layout.scss
@@ -46,7 +46,6 @@ body {
 }
 
 .wrapper {
-    height: 100vh;
     display: grid;
     grid-template-columns: 35% 65%;
 }
@@ -72,6 +71,7 @@ body {
     grid-column-start: 2;
     grid-column-end: 3;
     min-height: 100vh;
+    max-height: 100%;
 }
 
 .logo img {
