--- a/app/views/posts/view_condition.erb
+++ b/app/views/posts/view_condition.erb
@@ -13,7 +13,14 @@
 </div>
 
 <div class="page_content">
-    <%= line_chart Post.where(:user_id => current_user.id, :condition => @entries[0].condition ).group_by_day(:created_at).sum(:rating) %>
+    <div class="chart_title">Daily Progress</div>
+    <%= line_chart Post.where(:user_id => current_user.id, :condition => @entries[0].condition ).group_by_day(:created_at).average(:rating) %>
+    <div class="chart_title">Weekly Progress</div>
+    <%= line_chart Post.where(:user_id => current_user.id, :condition => @entries[0].condition ).group_by_week(:created_at).average(:rating) %>
+    <div class="chart_title">Monthly Progress</div>
+    <%= line_chart Post.where(:user_id => current_user.id, :condition => @entries[0].condition ).group_by_month(:created_at).average(:rating) %>
+    <div class="chart_title">Yearly Progress</div>
+    <%= line_chart Post.where(:user_id => current_user.id, :condition => @entries[0].condition ).group_by_year(:created_at).average(:rating) %>
 </div>
 
 <div class="conditions_content">
