Responsive nagivation added/menu bar

--- a/app/views/doctor_layout.erb
+++ b/app/views/doctor_layout.erb
@@ -32,6 +32,7 @@
 
         <div class="options_menu">
         <div class="logo"><img src="/images/logo.png" alt="Meditracker Logo"></div>
+        <div class="menu_button" id="menu_icon"><i class="fa fa-bars" aria-hidden="true"></i></div>
           <div class="outer_button">
                   <a href="/doctor_account"><div class="index_buttons"><i class="fas fa-clinic-medical"></i> Physician Dashboard</div></a>
           </div>
@@ -58,6 +59,7 @@
 
     </div>
 
+    <script src="/javascripts/menu.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <!--[if lt IE 7]>
       <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.2/CFInstall.min.js"></script>
