--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -90,7 +90,7 @@ body {
   text-align: center;
 }
 
-@media only screen and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+@media screen and (max-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
   .index_container {
     display: -webkit-box;
     display: -ms-flexbox;
