--- a/public/stylesheets/index.scss
+++ b/public/stylesheets/index.scss
@@ -68,8 +68,8 @@ body {
     text-align: center;
 }
 
-@media only screen 
-  and (max-device-width: 1024px) 
+@media screen 
+  and (max-width: 1024px)
   and (-webkit-min-device-pixel-ratio: 1) {
 
     .index_container {
