--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -144,4 +144,65 @@ h1.title_shadow {
 h2.title_shadow {
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
 }
+
+.menu_button {
+  position: fixed;
+  top: 15px;
+  right: 15px;
+  font-size: 20px;
+  border-radius: 50%;
+  color: white;
+  padding: 10px;
+  background-color: #042693;
+  visibility: hidden;
+}
+
+.menu_button:hover {
+  cursor: pointer;
+}
+
+@media screen and (max-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+  body {
+    overflow: hidden;
+  }
+  .wrapper {
+    overflow: hidden;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 100% 00%;
+        grid-template-columns: 100% 00%;
+    z-index: 1;
+  }
+  .wrapper.active {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 20% 80%;
+        grid-template-columns: 20% 80%;
+    z-index: -1;
+  }
+  .account_buttons.active {
+    overflow: hidden;
+  }
+  .content {
+    overflow: hidden;
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    grid-column-end: 2;
+    -ms-grid-row: 1;
+        grid-row-start: 1;
+    grid-row-end: 2;
+  }
+  .navigation {
+    -ms-grid-row: 1;
+        grid-row-start: 1;
+    grid-row-end: 2;
+    -ms-grid-column: 2;
+        grid-column-start: 2;
+    grid-column-end: 3;
+    background-color: #042693;
+  }
+  .menu_button {
+    visibility: visible;
+  }
+}
 /*# sourceMappingURL=layout.css.map */
