--- a/public/stylesheets/layout.scss
+++ b/public/stylesheets/layout.scss
@@ -114,3 +114,65 @@ h1.title_shadow {
 h2.title_shadow {
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
 }
+
+.menu_button {
+    position: fixed;
+    top: 15px;
+    right: 15px;
+    font-size: 20px;
+    border-radius: 50%;
+    color: white;
+    padding: 10px;
+    background-color: #042693;
+    visibility: hidden;
+}
+
+.menu_button:hover {
+    cursor: pointer;
+}
+
+@media screen 
+  and (max-width: 1024px)
+  and (-webkit-min-device-pixel-ratio: 1) {
+    body {
+        overflow: hidden;
+    }
+
+    .wrapper {
+        overflow: hidden;
+        display: grid;
+        grid-template-columns: 100% 00%;
+        z-index: 1;
+    }
+
+    .wrapper.active {
+        display: grid;
+        grid-template-columns: 20% 80%;
+        z-index: -1;
+    }
+
+    .account_buttons.active {
+        overflow: hidden;
+    }
+
+    .content {
+        overflow: hidden;
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 1;
+        grid-row-end: 2;
+    }
+    
+    .navigation {
+        grid-row-start: 1;
+        grid-row-end: 2;
+        grid-column-start: 2;
+        grid-column-end: 3;
+        background-color: #042693;
+    }
+
+    .menu_button {
+        visibility: visible;
+    }
+
+  }
