--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -162,11 +162,7 @@ h2.title_shadow {
 }
 
 @media screen and (max-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
-  body {
-    overflow: hidden;
-  }
   .wrapper {
-    overflow: hidden;
     display: -ms-grid;
     display: grid;
     -ms-grid-columns: 100% 00%;
@@ -184,7 +180,7 @@ h2.title_shadow {
     overflow: hidden;
   }
   .content {
-    overflow: hidden;
+    overflow-x: hidden;
     -ms-grid-column: 1;
         grid-column-start: 1;
     grid-column-end: 2;
