--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -210,6 +210,9 @@ h2.title_shadow {
     -ms-grid-columns: 100% 00%;
         grid-template-columns: 100% 00%;
     z-index: 1;
+    -webkit-transition: grid-template-columns 0.3s ease;
+    transition: grid-template-columns 0.3s ease;
+    transition: grid-template-columns 0.3s ease, -ms-grid-columns 0.3s ease;
   }
   .wrapper.active {
     display: -ms-grid;
@@ -217,6 +220,9 @@ h2.title_shadow {
     -ms-grid-columns: 20% 80%;
         grid-template-columns: 20% 80%;
     z-index: -1;
+    -webkit-transition: grid-template-columns 0.3s ease;
+    transition: grid-template-columns 0.3s ease;
+    transition: grid-template-columns 0.3s ease, -ms-grid-columns 0.3s ease;
   }
   .account_buttons.active {
     overflow: hidden;
